reports/chaps/chap00_1.err.log
Traceback (most recent call last):
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/zhihua/anaconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/zhihua/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
## Complex Numbers

```{admonition} Definition (Imaginary unit $i$)
The imaginary unit $i$ is defined as that   $i^2=-1$.
```

For example, if we have the following equation

\begin{equation*}
z^2=-4,
\end{equation*}

the roots will be

\begin{equation*}
z=\pm\sqrt{-4}=\pm\sqrt{4i^2}=\pm 2 i.
\end{equation*}
------------------

[0;36m  Cell [0;32mIn[1], line 3[0;36m[0m
[0;31m    ```{admonition} Definition (Imaginary unit $i$)[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1120068080.py, line 3)

